Fix for OSX Inline IME does not work in composer and text area when the Flash 6 plugin is running, bug 159016 r=ftang sr=sfraser