modules/plugin/base/src/nsPluginHostImpl.cpp
@@ -174,12 +174,11 @@
 #endif
 #endif
 
-#if defined(XP_MAC) && TARGET_CARBON
+#if defined(XP_MAC) || defined(XP_MACOSX)
+#if TARGET_CARBON
 #include "nsIClassicPluginFactory.h"
+#include <TextServices.h>
 #endif
-
-#if defined(XP_MAC) && TARGET_CARBON
-#include "nsIClassicPluginFactory.h"
 #endif
 
 // this is the name of the directory which will be created
@@ -4606,6 +4605,22 @@ NS_IMETHODIMP nsPluginHostImpl::GetPluginFactory(const char *aMimeType, nsIPlugi
         // no need to initialize, already done by CreatePlugin()
       }
     }
+
+#if defined(XP_MAC) || defined(XP_MACOSX)
+#if TARGET_CARBON
+   /* Flash 6.0 r50 and older on Mac has a bug which calls ::UseInputWindow(NULL, true) 
+      which turn off all our inline IME. Turn it back after the plugin 
+      initializtion and hope that future versions will be fixed. See bug 159016
+   */
+    if (pluginTag->mDescription && 
+       !PL_strncasecmp(pluginTag->mDescription, "Shockwave Flash 6.0", 19)) {
+       int ver = atoi(pluginTag->mDescription + 21);
+       if  (ver && ver <= 50) {
+         ::UseInputWindow(NULL, false);
+       }
+    }
+#endif
+#endif
 
     if (plugin != nsnull)
     {
